[project]
name = "netfingerprinter"
version = "0.1.0"
description = "Actively fingerprint network services via minimal protocol handshakes"
readme = "README.md"
authors = [
    { name = "pwgcz", email = "pgrabczak@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "rich>=14.3.3",
]

[project.scripts]
netfingerprinter = "netfingerprinter.cli:cli"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/netfingerprinter --cov-report=term-missing"
markers = [
    "unit: fast, no I/O",
    "integration: uses fake sockets",
    "e2e: full CLI runner tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
